Convert 3scale-cms-api models to Java records